# gonzalo

./: CHANGELOG.md  Cargo.toml  README.md  tickets.example.toml
.github/: labels.yml
.github/workflows/: ci.yml
crates/gonzalo/: Cargo.toml
crates/gonzalo-cli/: Cargo.toml
crates/gonzalo-cli/src/: lib.rs  main.rs
crates/gonzalo-core/: Cargo.toml
crates/gonzalo-core/src/: conformance.rs  error.rs  identity.rs  key.rs  lib.rs  merge.rs  paths.rs  record.rs  revision.rs  store.rs  sync.rs
crates/gonzalo-domain/: Cargo.toml
crates/gonzalo-domain/src/: checkpoint.rs  codec.rs  lib.rs  memory.rs  session.rs  ticket.rs
crates/gonzalo-graph/: Cargo.toml
crates/gonzalo-graph/src/: builder.rs  lib.rs  model.rs  store.rs
crates/gonzalo-knowledge/: Cargo.toml
crates/gonzalo-knowledge/src/: lib.rs
crates/gonzalo-proto/: Cargo.toml  build.rs
crates/gonzalo-proto/proto/: gonzalo.proto
crates/gonzalo-proto/src/: http.rs  lib.rs
crates/gonzalo-server/: Cargo.toml
crates/gonzalo-server/src/: grpc.rs  http.rs  lib.rs  service.rs
crates/gonzalo-store-fs/: Cargo.toml
crates/gonzalo-store-fs/src/: layout.rs  lib.rs
crates/gonzalo-store-fs/tests/: conformance.rs  list_ignores_stray_files.rs
crates/gonzalo-store-git/: Cargo.toml
crates/gonzalo-store-git/src/: lib.rs
crates/gonzalo-store-git/tests/: conformance.rs
crates/gonzalo-store-s3/: Cargo.toml
crates/gonzalo-store-s3/src/: lib.rs
crates/gonzalo-store-s3/tests/: integration.rs
crates/gonzalo-store-server/: Cargo.toml
crates/gonzalo-store-server/src/: lib.rs
crates/gonzalo-store-server/tests/: conformance.rs
crates/gonzalo-ticket/: Cargo.toml
crates/gonzalo-ticket-asana/: Cargo.toml
crates/gonzalo-ticket-asana/src/: lib.rs  mapping.rs  source.rs
crates/gonzalo-ticket-asana/tests/: conformance.rs
crates/gonzalo-ticket-config/: Cargo.toml
crates/gonzalo-ticket-config/src/: lib.rs
crates/gonzalo-ticket-github/: Cargo.toml
crates/gonzalo-ticket-github/src/: lib.rs  mapping.rs  project_mapping.rs  project_source.rs  source.rs
crates/gonzalo-ticket-github/tests/: conformance.rs
crates/gonzalo-ticket-gitlab/: Cargo.toml
crates/gonzalo-ticket-gitlab/src/: lib.rs  mapping.rs  source.rs
crates/gonzalo-ticket-gitlab/tests/: conformance.rs
crates/gonzalo-ticket-jira/: Cargo.toml
crates/gonzalo-ticket-jira/src/: lib.rs  mapping.rs  source.rs
crates/gonzalo-ticket-jira/tests/: conformance.rs
crates/gonzalo-ticket-linear/: Cargo.toml
crates/gonzalo-ticket-linear/src/: lib.rs  mapping.rs  source.rs
crates/gonzalo-ticket-linear/tests/: conformance.rs
crates/gonzalo-ticket/src/: conformance.rs  ingest.rs  lib.rs  mapping.rs  mock.rs  source.rs
crates/gonzalo-vector/: Cargo.toml
crates/gonzalo-vector/src/: index.rs  lib.rs
crates/gonzalo/src/: lib.rs
docs/adr/: 0001-record-architecture-decisions.md  0002-uniform-record-store-core.md  0003-license-agpl-3.0.md  0004-pluggable-storage-substrates.md  0005-optimistic-concurrency-and-conflict-surfacing.md  0006-substrate-conformance-suite.md  0007-dual-transport-daemon.md  0008-capability-layers-over-core.md  0009-workspace-layout-and-facade.md  0010-ticket-system-capability-layer.md  0011-knowledge-store-capability.md  README.md  template.md
docs/superpowers/plans/: 2026-06-05-gonzalo-m1-foundation.md  2026-06-05-gonzalo-m2-substrates-sync.md  2026-06-05-gonzalo-m3-daemon.md  2026-06-06-gonzalo-m4-m5-vector-graph.md  2026-06-06-gonzalo-m6-cli.md  2026-06-14-gonzalo-ticket-board-foundation.md
docs/superpowers/specs/: 2026-06-05-gonzalo-design.md  2026-06-14-gonzalo-ticket-board-foundation-design.md
scripts/: coverage-report.py  coverage.sh
