[workspace]
resolver = "2"
members = [
    "crates/gonzalo-core",
    "crates/gonzalo-store-fs",
    "crates/gonzalo-domain",
    "crates/gonzalo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["John Ford <john.ford2002@gmail.com>"]
rust-version = "1.95"
repository = "https://github.com/caliban-ai/gonzalo"

[workspace.dependencies]
gonzalo-core   = { path = "crates/gonzalo-core" }
gonzalo-store-fs = { path = "crates/gonzalo-store-fs" }
gonzalo-domain = { path = "crates/gonzalo-domain" }
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
blake3      = "1"
tempfile    = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
