[workspace]
resolver = "2"
members = [
    "crates/gonzalo-core",
    "crates/gonzalo-store-fs",
    "crates/gonzalo-store-git",
    "crates/gonzalo-store-s3",
    "crates/gonzalo-proto",
    "crates/gonzalo-server",
    "crates/gonzalo-store-server",
    "crates/gonzalo-domain",
    "crates/gonzalo",
    "crates/gonzalo-vector",
    "crates/gonzalo-graph",
    "crates/gonzalo-ticket",
    "crates/gonzalo-ticket-github",
    "crates/gonzalo-ticket-jira",
    "crates/gonzalo-ticket-linear",
    "crates/gonzalo-ticket-gitlab",
    "crates/gonzalo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["John Ford <john.ford2002@gmail.com>"]
rust-version = "1.95"
repository = "https://github.com/caliban-ai/gonzalo"

[workspace.dependencies]
gonzalo-core   = { path = "crates/gonzalo-core" }
gonzalo-store-fs = { path = "crates/gonzalo-store-fs" }
gonzalo-store-git = { path = "crates/gonzalo-store-git" }
git2         = { version = "0.20", default-features = false }
gonzalo-store-s3 = { path = "crates/gonzalo-store-s3" }
aws-config   = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3   = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
gonzalo-proto = { path = "crates/gonzalo-proto" }
tonic       = "0.12"
prost       = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
axum        = "0.8"
tokio-stream = { version = "0.1", features = ["net"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gonzalo-server = { path = "crates/gonzalo-server" }
gonzalo-store-server = { path = "crates/gonzalo-store-server" }
gonzalo-domain = { path = "crates/gonzalo-domain" }
gonzalo-vector = { path = "crates/gonzalo-vector" }
gonzalo-graph = { path = "crates/gonzalo-graph" }
gonzalo-ticket = { path = "crates/gonzalo-ticket" }
gonzalo-ticket-github = { path = "crates/gonzalo-ticket-github" }
gonzalo-ticket-jira = { path = "crates/gonzalo-ticket-jira" }
gonzalo-ticket-linear = { path = "crates/gonzalo-ticket-linear" }
gonzalo-ticket-gitlab = { path = "crates/gonzalo-ticket-gitlab" }
gonzalo-cli   = { path = "crates/gonzalo-cli" }
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
blake3      = "1"
tempfile    = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
