[package]
name = "gonzalo-domain"
description = "Typed domain views over gonzalo records (memory, sessions, checkpoints)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[lints]
workspace = true
