[package]
name = "gonzalo-knowledge"
description = "Knowledge-store capability for gonzalo (records + vector + graph by RecordKey)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core   = { workspace = true }
gonzalo-domain = { workspace = true }
gonzalo-vector = { workspace = true }

[dev-dependencies]
tokio            = { workspace = true }
async-trait      = { workspace = true }
gonzalo-store-fs = { workspace = true }
tempfile         = { workspace = true }

[lints]
workspace = true
