[package]
name = "gonzalo-server"
description = "The gonzalo daemon: serves a Store over gRPC and HTTP/JSON"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core  = { workspace = true }
gonzalo-proto = { workspace = true }
gonzalo-store-fs = { workspace = true }
gonzalo-ticket        = { workspace = true }
gonzalo-ticket-config = { workspace = true }
tonic         = { workspace = true }
prost         = { workspace = true }
axum          = { workspace = true }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# The ticket_sync test must mutate process env (unsafe in edition 2024), so this
# crate uses a local `deny` instead of the workspace-wide `forbid`, which cannot
# be locally overridden. Library code remains unsafe-free.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

[[bin]]
name = "gonzalod"
path = "src/bin/gonzalod.rs"
