[package]
name = "gonzalo-store-fs"
description = "Filesystem storage substrate for gonzalo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core = { workspace = true }
async-trait  = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["fs", "io-util", "rt", "macros"] }

[dev-dependencies]
gonzalo-core = { workspace = true, features = ["conformance"] }
tokio        = { workspace = true }
tempfile     = { workspace = true }

[lints]
workspace = true
