[package]
name = "gonzalo-store-git"
description = "Git-backed storage substrate for gonzalo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core = { workspace = true }
async-trait  = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["fs", "io-util", "rt", "macros", "sync"] }
git2         = { workspace = true }

[dev-dependencies]
gonzalo-core = { workspace = true, features = ["conformance"] }
tokio        = { workspace = true }
tempfile     = { workspace = true }

[lints]
workspace = true
