[package]
name = "gonzalo"
description = "Facade for the gonzalo persistence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core   = { workspace = true }
gonzalo-domain = { workspace = true }
gonzalo-store-fs = { workspace = true, optional = true }

[features]
default = ["fs"]
fs = ["dep:gonzalo-store-fs"]

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
