[package]
name = "gonzalo"
description = "Facade for the gonzalo persistence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gonzalo-core   = { workspace = true }
gonzalo-domain = { workspace = true }
gonzalo-store-fs = { workspace = true, optional = true }
gonzalo-store-git = { workspace = true, optional = true }
gonzalo-store-s3 = { workspace = true, optional = true }
gonzalo-store-server = { workspace = true, optional = true }
gonzalo-vector = { workspace = true, optional = true }
gonzalo-graph = { workspace = true, optional = true }
gonzalo-ticket = { workspace = true, optional = true }
gonzalo-ticket-github = { workspace = true, optional = true }
gonzalo-ticket-jira = { workspace = true, optional = true }
gonzalo-ticket-linear = { workspace = true, optional = true }

[features]
default = ["fs"]
fs = ["dep:gonzalo-store-fs"]
git = ["dep:gonzalo-store-git"]
s3 = ["dep:gonzalo-store-s3"]
remote = ["dep:gonzalo-store-server"]
vector = ["dep:gonzalo-vector"]
graph = ["dep:gonzalo-graph"]
ticket = ["dep:gonzalo-ticket"]
ticket-github = ["dep:gonzalo-ticket-github", "ticket"]
ticket-jira = ["dep:gonzalo-ticket-jira", "ticket"]
ticket-linear = ["dep:gonzalo-ticket-linear", "ticket"]

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
